RESOLVED FIXED11141
REGRESSION(r16681-r16691): CSS '@import' doesn't respect HTML Base element
https://bugs.webkit.org/show_bug.cgi?id=11141
Summary REGRESSION(r16681-r16691): CSS '@import' doesn't respect HTML Base element
Alex Taylor
Reported 2006-10-03 16:30:31 PDT
Not sure how long this has been regressed for, less than two weeks ago it changed (haven't been hunting yet). It is a regression from previous nightlies. On a page with an HTML Base element, all relative URLs should be based from the href attribute of the Base element. Currently, @import statements within a 'style' block are left relative to the document.
Attachments
proposed fix (46.55 KB, patch)
2006-10-17 11:34 PDT, Alexey Proskuryakov
mitz: review+
Alex Taylor
Comment 1 2006-10-03 16:36:39 PDT
Added URL with minimal test case. This bug is not present in the release builds of Safari.
Mark Rowe (bdash)
Comment 2 2006-10-03 17:49:52 PDT
Alex, your test case has a link-local hostname as the base URL, so it will not work for anyone other than yourself. Can you please update the test case so that we can look into this bug?
Alex Taylor
Comment 3 2006-10-03 20:31:55 PDT
Oh right. Smart move that was. *Slaps forehead* Testcase updated.
Alex Taylor
Comment 4 2006-10-03 21:01:26 PDT
Regression occurred between r16681 (Sat Sept 30) and r16691 (Sun Oct 1).
Mark Rowe (bdash)
Comment 5 2006-10-03 21:12:34 PDT
Thanks for the reduction and timeframe Alex.
Alexey Proskuryakov
Comment 6 2006-10-04 02:08:56 PDT
Probably broke this when fixing bug 11011.
Alexey Proskuryakov
Comment 7 2006-10-17 11:34:26 PDT
Created attachment 11124 [details] proposed fix
mitz
Comment 8 2006-10-19 09:41:54 PDT
Comment on attachment 11124 [details] proposed fix r=me
Alexey Proskuryakov
Comment 9 2006-10-19 09:46:54 PDT
Committed revision 17136.
Alexey Proskuryakov
Comment 10 2006-10-19 09:59:14 PDT
*** Bug 11203 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.